--- a/ecommerce/backend/package.json
+++ b/ecommerce/backend/package.json
@@ -5,7 +5,7 @@
   "description": "backend stuff",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "nodemon server.js --ignore client",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Pratik",
